--- a/layouts/partials/github/stats.html
+++ b/layouts/partials/github/stats.html
@@ -4,13 +4,15 @@
 <span title='{{ i18n "githubOsiApprovedReposDescription" }}'>
     {{- i18n "githubOsiApprovedRepos" -}}
 </span><br>
+💬 {{ partial "github/stats/commits" . }}
+{{ i18n "githubCommits" }}<br>
+💾 {{ partial "github/stats/size" . }}
+{{ i18n "githubSize" }}<br>
 ⭐ {{ partial "github/stats/stars" . }}
 {{ i18n "githubStars" }}<br>
 🔀 {{ partial "github/stats/forks" . }}
 {{ i18n "githubForks" }}<br>
-💾 {{ partial "github/stats/size" . }}
-{{ i18n "githubSize" }}<br>
-🏢 {{ partial "github/stats/organizations" . }}
-{{ i18n "githubOrganizations" }}<br>
 👁️ {{ partial "github/stats/followers" . }}
 {{ i18n "githubFollowers" }}<br>
+🏢 {{ partial "github/stats/organizations" . }}
+{{ i18n "githubOrganizations" }}<br>
