Add code highlighting

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,6 +9,7 @@ $font-awesome-size: 1em * $font-awesome-scale;
 
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap");
 @import "../node_modules/normalize-scss/sass/normalize";
+@import "code";
 
 body {
     display: flex;
