--- a/layouts/shortcodes/cv/highest-degree.html
+++ b/layouts/shortcodes/cv/highest-degree.html
@@ -1,1 +1,17 @@
-{{- partial "cv/highest-degree" $.Site.Data.education -}}
+{{- with $.Site.Data.education -}}
+    {{- $education := . -}}
+    {{- $education = where $education "to.year" ">" 0 -}}
+    {{- $education = sort $education "to.month" "desc" -}}
+    {{- $education = sort $education "to.year" "desc" -}}
+    {{- with index $education 0 -}}
+        {{- with .degree -}}
+            {{ $description := .description }}
+            {{- with .program -}}
+                {{- $description = print $description " " . -}}
+            {{- end -}}
+            <span title="{{- $description -}}">
+                {{- .title -}}
+            </span>
+        {{- end -}}
+    {{- end -}}
+{{- end -}}
