--- a/layouts/shortcodes/cv/publications.html
+++ b/layouts/shortcodes/cv/publications.html
@@ -226,7 +226,7 @@
                                 </details>
                             </small>
                         </td>
-                        <td>
+                        <td class="actions">
                             {{ with $linkPaper }}
                                 <a href="{{ . }}"
                                    download="{{ anchorize $title }}{{ path.Ext . }}"
