--- a/layouts/shortcodes/cv/open-source.html
+++ b/layouts/shortcodes/cv/open-source.html
@@ -80,11 +80,11 @@
                 {{- $topRepo := index $topRepos 0 -}}
                 {{- with $topRepo -}}
                     <tr>
-                        <td>
+                        <th>
                             {{- time.Format "01/2006" .created_at -}}
                             {{- " - " -}}
                             {{- time.Format "01/2006" .pushed_at -}}
-                        </td>
+                        </th>
                         <td>
                             <a href="{{- .html_url -}}" rel="noreferrer" target="_blank" title="{{- .full_name -}}">
                                 {{- .name -}}
@@ -110,7 +110,7 @@
                             {{- end -}}
                             {{- $description | truncate 60 -}}
                         </td>
-                        <td>
+                        <td class="actions">
                             <a href="{{- .html_url -}}" rel="noreferrer" target="_blank">
                                 {{- partial "icon/fontawesome" "solid/code" -}}
                             </a>
