--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -53,7 +53,7 @@
     {{ partial "site/navigation" $ }}
 {{ end }}
 
-<main role="main">
+<main>
     {{ block "main" . }}{{ end }}
 </main>
 {{ block "footer" . }}{{ partial "site/footer" $ }}{{ end }}
