--- a/layouts/partials/site/scripts.html
+++ b/layouts/partials/site/scripts.html
@@ -1,2 +1,2 @@
 {{ $js := resources.Get "js/main.js" | resources.Minify | resources.Fingerprint "sha512" }}
-<script type="text/javascript" src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}"></script>
+<script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}"></script>
