Remove table class

--- a/layouts/shortcodes/cv/education.html
+++ b/layouts/shortcodes/cv/education.html
@@ -1,7 +1,7 @@
 {{- $education := $.Site.Data.education -}}
 {{- $education = sort $education "from.month" "desc" -}}
 {{- $education = sort $education "from.year" "desc" -}}
-<figure class="timeline">
+<figure>
     <table>
         <tbody>
         {{- range $education -}}
