--- a/layouts/shortcodes/cv/experience.html
+++ b/layouts/shortcodes/cv/experience.html
@@ -1,7 +1,7 @@
 {{- $experience := $.Site.Data.experience -}}
 {{- $experience = sort $experience "from.month" "desc" -}}
 {{- $experience = sort $experience "from.year" "desc" -}}
-<figure class="timeline">
+<figure>
     <table>
         <tbody>
         {{- range $experience -}}
