--- a/layouts/shortcodes/cv/open-source.html
+++ b/layouts/shortcodes/cv/open-source.html
@@ -65,7 +65,7 @@
 
 {{/* List most common languages. */}}
 {{- with $languages -}}
-    <figure class="timeline">
+    <figure>
         <table>
             <tbody>
             {{- range . -}}
