Update profile image

--- a/layouts/shortcodes/profile-image.html
+++ b/layouts/shortcodes/profile-image.html
@@ -1,8 +1,7 @@
 {{- $resource := resources.Get "profile.jpg" -}}
 {{- $title := i18n "profile" -}}
 {{- with $resource -}}
-{{- $fullResource := resources.Get "profile-portrait.jpg" -}}
-{{- $link := $fullResource.RelPermalink -}}
+{{- $link := $resource.RelPermalink -}}
 <figure class="profile">
     <a href="{{ $link }}"{{ with $title }} title="{{ . }}"{{ end }}>
         {{- with .Fit "400x400" -}}
