--- a/layouts/partials/github/stats.html
+++ b/layouts/partials/github/stats.html
@@ -4,8 +4,8 @@
 <span title='{{ i18n "githubOsiApprovedReposDescription" }}'>
     {{- i18n "githubOsiApprovedRepos" -}}
 </span><br>
-💬 {{ partial "github/stats/commits" . }}
-{{ i18n "githubCommits" }}<br>
+{{/*💬 {{ partial "github/stats/commits" . }}*/}}
+{{/*{{ i18n "githubCommits" }}<br>*/}}
 💾 {{ partial "github/stats/size" . }}
 {{ i18n "githubSize" }}<br>
 ⭐ {{ partial "github/stats/stars" . }}
