Fix publications if missing publisher

--- a/layouts/shortcodes/cv/publications.html
+++ b/layouts/shortcodes/cv/publications.html
@@ -211,7 +211,9 @@
                                 {{- with $pages -}}
                                     {{- . -}}{{- ". " -}}
                                 {{- end -}}
-                                {{- $publisher -}}{{- ". " -}}
+                                {{- with $publisher -}}
+                                    {{- . -}}{{- ". " -}}
+                                {{- end -}}
                                 {{ with $linkDoi }}
                                     {{ i18n "doi" }}:&nbsp;{{- "" -}}
                                     <a href="{{ . }}" title="{{ i18n "doiDescription" }}" rel="noreferrer"
